force-app/main/default/objects/Opportunity/fields/A_llaves__c.field-meta.xml
<CustomField>
    <fullName>A_llaves__c</fullName>
    <label>A llaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>