force-app/main/default/objects/Opportunity/fields/Acumulado_de_Importe_Pagado__c.field-meta.xml
<CustomField>
    <fullName>Acumulado_de_Importe_Pagado__c</fullName>
    <inlineHelpText>Los depósitos (Reserva sin IVA) no se contabilizan en este campo</inlineHelpText>
    <label>Acumulado de Importe Pagado</label>
    <summarizedField>Factura__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Factura__c.Tipo_de_factura__c</field>
        <operation>equals</operation>
        <value>RESERVAS, FACTURA DE VENTA, ENTREGAS A CUENTA, MEJORAS</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Factura__c.Estado_de_la_factura__c</field>
        <operation>equals</operation>
        <value>Cobrada</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Factura__c.ImpagoAsociado__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Factura__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>