force-app/main/default/objects/Opportunity/fields/Acumulado_pendiente_de_cobro__c.field-meta.xml
<CustomField>
    <fullName>Acumulado_pendiente_de_cobro__c</fullName>
    <formula>Amount -  Acumulado_de_Importe_Pagado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acumulado pendiente de cobro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>