force-app/main/default/objects/Opportunity/fields/AcumuladoPendienteCobroIVA__c.field-meta.xml
<CustomField>
    <fullName>AcumuladoPendienteCobroIVA__c</fullName>
    <formula>Acumulado_pendiente_de_cobro__c *  Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acumulado pendiente de cobro con IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>