force-app/main/default/objects/Opportunity/fields/AcumuladoPendienteCobroTotal__c.field-meta.xml
<CustomField>
    <fullName>AcumuladoPendienteCobroTotal__c</fullName>
    <formula>Acumulado_pendiente_de_cobro__c +  AcumuladoPendienteCobroIVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acumulado pendiente de cobro Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>