force-app/main/default/objects/Opportunity/fields/Aplazado_Intereses__c.field-meta.xml
<CustomField>
    <fullName>Aplazado_Intereses__c</fullName>
    <label>Aplazado Intereses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>