force-app/main/default/objects/Opportunity/fields/Aplazado_Principal__c.field-meta.xml
<CustomField>
    <fullName>Aplazado_Principal__c</fullName>
    <label>Aplazado Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>