force-app/main/default/objects/Opportunity/fields/Asignacion_participantes__c.field-meta.xml
<CustomField>
    <fullName>Asignacion_participantes__c</fullName>
    <description>Suma de los porcentajes de asignación de todos los participantes de la oportunidad</description>
    <inlineHelpText>Suma de los porcentajes de asignación de todos los participantes de la oportunidad</inlineHelpText>
    <label>% Asignacion participantes</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>