force-app/main/default/objects/Opportunity/fields/Aux18DigId__c.field-meta.xml
<CustomField>
    <fullName>Aux18DigId__c</fullName>
    <formula>CASESAFEID(AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aux18DigId</label>
    <type>Text</type>
</CustomField>