force-app/main/default/objects/Opportunity/fields/AUX_Etapa_Contrato__c.field-meta.xml
<CustomField>
    <fullName>AUX_Etapa_Contrato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad Contrato</label>
    <type>Checkbox</type>
</CustomField>