force-app/main/default/objects/Opportunity/fields/BIC_Cuenta_cliente__c.field-meta.xml
<CustomField>
    <fullName>BIC_Cuenta_cliente__c</fullName>
    <label>BIC Cuenta cliente</label>
    <length>11</length>
    <type>Text</type>
</CustomField>