force-app/main/default/objects/Opportunity/fields/Clave_precio__c.field-meta.xml
<CustomField>
    <fullName>Clave_precio__c</fullName>
    <label>Clave precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>