force-app/main/default/objects/Opportunity/fields/Concepto_transferencia__c.field-meta.xml
<CustomField>
    <fullName>Concepto_transferencia__c</fullName>
    <label>Concepto transferencia</label>
    <length>140</length>
    <type>Text</type>
</CustomField>