force-app/main/default/objects/Opportunity/fields/CONGA_Amount_ContratoMenosReserva_IVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Amount_ContratoMenosReserva_IVA__c</fullName>
    <formula>CONGA_ContratoMenosReserva__c + CONGA_ContratoMenosReservaIVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Amount_ContratoMenosReserva_IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>