force-app/main/default/objects/Opportunity/fields/CONGA_Amount_Cuota_IVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Amount_Cuota_IVA__c</fullName>
    <formula>Importe_de_Cuota__c +  CONGA_CuotaIVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Amount_Cuota_IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>