force-app/main/default/objects/Opportunity/fields/CONGA_Amount_Pago_contrato_IVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Amount_Pago_contrato_IVA__c</fullName>
    <formula>((Amount * Pago_Contrato_al_contado__c) / 1) * (1 + Porcentaje_IVA__c / 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Amount Pago contrato IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>