force-app/main/default/objects/Opportunity/fields/CONGA_AmountEscrituraIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_AmountEscrituraIVA__c</fullName>
    <formula>Importe_escritura__c + CONGA_Hipoteca_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_AmountEscrituraIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>