force-app/main/default/objects/Opportunity/fields/CONGA_AmountIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_AmountIVA__c</fullName>
    <formula>(1 - Porcentaje_IVA__c / 100) * Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_AmountIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>