force-app/main/default/objects/Opportunity/fields/CONGA_AmountPlanPagosIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_AmountPlanPagosIVA__c</fullName>
    <formula>Importe_plan_de_pagos__c + CONGA_PlanPagoIVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_AmountPlanPagosIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>