force-app/main/default/objects/Opportunity/fields/CONGA_AmountReservaIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_AmountReservaIVA__c</fullName>
    <formula>Reserva__c + CONGA_ReservaIVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_AmountReservaIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>