force-app/main/default/objects/Opportunity/fields/CONGA_Contact_id__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Contact_id__c</fullName>
    <formula>CASESAFEID(Promocion__r.Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Contact id</label>
    <type>Text</type>
</CustomField>