force-app/main/default/objects/Opportunity/fields/CONGA_ContratoMenosReserva__c.field-meta.xml
<CustomField>
    <fullName>CONGA_ContratoMenosReserva__c</fullName>
    <formula>Importe_de_Entrada__c - Reserva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_ContratoMenosReserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>