force-app/main/default/objects/Opportunity/fields/CONGA_ContratoMenosReservaIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_ContratoMenosReservaIVA__c</fullName>
    <formula>CONGA_ContratoMenosReserva__c *  Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_ContratoMenosReservaIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>