force-app/main/default/objects/Opportunity/fields/CONGA_ContratoPrivado__c.field-meta.xml
<CustomField>
    <fullName>CONGA_ContratoPrivado__c</fullName>
    <formula>Importe_de_Entrada__c -  Reserva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_ContratoPrivado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>