force-app/main/default/objects/Opportunity/fields/CONGA_CuotaIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_CuotaIVA__c</fullName>
    <formula>Importe_de_Cuota__c * Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_CuotaIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>