force-app/main/default/objects/Opportunity/fields/CONGA_Facturas__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Facturas__c</fullName>
    <label>CONGA_Facturas</label>
    <summarizedField>Factura__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Factura__c.Pago_o_Cuota__c</field>
        <operation>equals</operation>
        <value>Cuota, Cuota Extra</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Factura__c.Estado_de_la_factura__c</field>
        <operation>notEqual</operation>
        <value>Cancelada, Cobrada, Pdte.Envío a Oracle</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Factura__c.Estado_plan_de_pagos__c</field>
        <operation>equals</operation>
        <value>Inactivo</value>
    </summaryFilterItems>
    <summaryForeignKey>Factura__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>