force-app/main/default/objects/Opportunity/fields/CONGA_Hipoteca_Subrogar__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Hipoteca_Subrogar__c</fullName>
    <formula>Amount * Pago_Escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Hipoteca Subrogar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>