force-app/main/default/objects/Opportunity/fields/CONGA_Liquidar_Llaves__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Liquidar_Llaves__c</fullName>
    <formula>CONGA_Vencido_Pendiente__c +  Amount *  Pago_Escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Liquidar Llaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>