force-app/main/default/objects/Opportunity/fields/CONGA_Liquidar_Llaves_Total__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Liquidar_Llaves_Total__c</fullName>
    <formula>CONGA_Liquidar_Llaves__c + CONGA_Liquidar_Llaves_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Liquidar Llaves Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>