force-app/main/default/objects/Opportunity/fields/CONGA_Pago_a_vendedora__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Pago_a_vendedora__c</fullName>
    <formula>Acumulado_pendiente_de_cobro__c -  Hipoteca_Principal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA Pago a vendedora</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>