force-app/main/default/objects/Opportunity/fields/CONGA_Pago_a_vendedora_Total__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Pago_a_vendedora_Total__c</fullName>
    <formula>AcumuladoPendienteCobroTotal__c +  AcumuladoPendienteCobroIVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA Pago a vendedora Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>