force-app/main/default/objects/Opportunity/fields/CONGA_Plan_Pagos_c__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Plan_Pagos_c__c</fullName>
    <label>CONGA_Plan_Pagos_c</label>
    <summaryFilterItems>
        <field>Factura__c.Pago_o_Cuota__c</field>
        <operation>equals</operation>
        <value>Cuota Extra</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Factura__c.Estado_de_la_factura__c</field>
        <operation>notEqual</operation>
        <value>Pdte.Envío a Oracle, Cancelada</value>
    </summaryFilterItems>
    <summaryForeignKey>Factura__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>