force-app/main/default/objects/Opportunity/fields/CONGA_Plan_Pagos_f__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Plan_Pagos_f__c</fullName>
    <label>CONGA_Plan_Pagos_f</label>
    <summaryFilterItems>
        <field>Factura__c.Pago_o_Cuota__c</field>
        <operation>equals</operation>
        <value>Cuota Extra</value>
    </summaryFilterItems>
    <summaryForeignKey>Factura__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>