force-app/main/default/objects/Opportunity/fields/CONGA_Plan_Pagos_p__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Plan_Pagos_p__c</fullName>
    <formula>(CONGA_Plan_Pagos_c__c / CONGA_Plan_Pagos_f__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Plan_Pagos_p</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>