force-app/main/default/objects/Opportunity/fields/CONGA_PlanPagoIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_PlanPagoIVA__c</fullName>
    <formula>Importe_plan_de_pagos__c * Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_PlanPagoIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>