force-app/main/default/objects/Opportunity/fields/CONGA_PlanPagosSIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_PlanPagosSIVA__c</fullName>
    <formula>(Pago_Contrato__c / 100) * Importe_plan_de_pagos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_PlanPagosSIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>