force-app/main/default/objects/Opportunity/fields/CONGA_Precio_Venta_Total__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Precio_Venta_Total__c</fullName>
    <formula>Amount +  CONGA_Precio_Venta_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Precio Venta Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>