force-app/main/default/objects/Opportunity/fields/CONGA_Promocion_ID__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Promocion_ID__c</fullName>
    <formula>CASESAFEID(Promocion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Promoción ID</label>
    <type>Text</type>
</CustomField>