force-app/main/default/objects/Opportunity/fields/CONGA_Reserva_IVAT__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Reserva_IVAT__c</fullName>
    <formula>&quot;Aplazado hasta entrega de llaves ( &quot; +
IF(ISBLANK(TEXT(Pago_Contrato_al_contado__c)) ,&quot;________&quot;,TEXT(Pago_Contrato_al_contado__c)) + &quot;0 % ) &quot; + 
IF(ISBLANK(TEXT(Importe_plan_de_pagos_real__c)) ,&quot;________&quot;,TEXT(Importe_plan_de_pagos_real__c)) + &quot; EUROS SIN IVA (Mediante &quot;  +
IF(ISBLANK(TEXT(N_Cuotas__c)) ,&quot;________&quot;,TEXT(N_Cuotas__c)) + &quot; pagos mensuales y consecutivos de igual importe y &quot; +
IF(ISBLANK(TEXT(Numero_Cuotas_Extra__c)) ,&quot;________&quot;,TEXT(Numero_Cuotas_Extra__c)) + &quot; cuotas extra de &quot; + 
IF(ISBLANK(TEXT(Importe_Cuota_Extra__c)) ,&quot;________&quot;,TEXT(Importe_Cuota_Extra__c)) + &quot;€ ).&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Reserva IVAT</label>
    <type>Text</type>
</CustomField>