force-app/main/default/objects/Opportunity/fields/CONGA_ReservaIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_ReservaIVA__c</fullName>
    <formula>Reserva__c * Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_ReservaIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>