force-app/main/default/objects/Opportunity/fields/CONGA_Resto_Escritura__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Resto_Escritura__c</fullName>
    <formula>Pago_Escritura__c/1 *  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Resto Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>