force-app/main/default/objects/Opportunity/fields/CONGA_Total_Amount_IVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Total_Amount_IVA__c</fullName>
    <formula>Amount + CONGA_Amount_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Total_Amount_IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>