force-app/main/default/objects/Opportunity/fields/CONGA_TxtCom1__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtCom1__c</fullName>
    <formula>IF(Account.RecordType.DeveloperName = &apos;PersonAccount&apos;,&apos;en su propio nombre y derecho.&apos;, &apos;, en nombre y representación de &apos; + IF(ISBLANK(Account.Name), &quot;________&quot;, Account.Name) + &apos; S.L. con CIF &apos; + IF(ISBLANK(Account.N_Documento__c), &quot;________&quot;, Account.N_Documento__c) + &apos; y con domicilio social en &apos; + IF(Account.DP_Pais__r.Name = &apos;España&apos;,  IF(ISBLANK(TEXT(Account.DP_Tipo_de_vIa__c)), &quot;________&quot;, TEXT(Account.DP_Tipo_de_vIa__c)) + &apos; &apos; + IF(ISBLANK(Account.DP_Nombre_via__c), &quot;________&quot;, Account.DP_Nombre_via__c) + &apos;, número &apos; + IF(ISBLANK(Account.NumeroViaText__c), &quot;________&quot;, Account.NumeroViaText__c) + &apos; CP &apos; + IF(ISBLANK(Account.DP_Codigo_postal__c), &quot;________&quot;, Account.DP_Codigo_postal__c),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtCom1</label>
    <type>Text</type>
</CustomField>