force-app/main/default/objects/Opportunity/fields/CONGA_TxtRes1__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtRes1__c</fullName>
    <formula>IF(OR(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva sin IVA&apos;), ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva con IVA&apos;)),&apos;Todos los recibos serán domiciliados en la cuenta designada por la parte compradora que en este acto acepta que se le giren; siendo la cuenta referida la siguiente C.C.: &apos; + IF(ISBLANK(Cuenta_Bancaria_de_mandato__c), &apos; _________ &apos; , Cuenta_Bancaria_de_mandato__c) + &apos;.&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtRes1</label>
    <type>Text</type>
</CustomField>