force-app/main/default/objects/Opportunity/fields/CONGA_TxtRes2__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtRes2__c</fullName>
    <formula>IF(ISPICKVAL(Tipo_de_Reserva__c , &apos;Reserva sin IVA&apos;), &apos;La parte COMPRADORA confiere autorización y mandato tan amplio como en derecho se requiere y sea necesario, a la parte VENDEDORA, para que ésta o quien ella designe, en relación con la Finca objeto de este contrato, pueda concertar y formalizar préstamos con garantía hipotecaria; y para que hasta el momento de la entrega de la Finca (es decir, la transmisión de la propiedad) pueda modificar, novar y dividir tal hipoteca de acuerdo con las condiciones de pago pactadas en este contrato, distribuyendo las responsabilidades que la garanticen, en la forma que tenga por conveniente, pudiendo firmar liquidaciones y percibir directamente el importe total del préstamo en una o más entregas, pagar cantidades y, en definitiva, ejecutar cuantos actos y otorgar cuantos documentos públicos o privados considere convenientes a tales fines, siendo de cuenta del VENDEDOR los gastos ocasionados, y por cuenta de la COMPRADORA todos los gastos derivados de una eventual subrogación.&apos;,&apos;&apos;) + IF(ISPICKVAL(Tipo_de_Reserva__c , &apos;Reserva con IVA&apos;),&apos;La parte compradora le confiere autorización y mandato tan amplio como en derecho se requiere y sea necesario, para que la parte vendedora, o quien ella designe, en relación con la Finca objeto de este contrato, pueda concertar y formalizar préstamos con garantía hipotecaria; y para que hasta el momento de la entrega de la Finca (es decir, la transmisión de la propiedad) pueda modificar, novar y dividir tal hipoteca de acuerdo con las condiciones de pago pactadas en este contrato, distribuyendo las responsabilidades que la garanticen, en la forma que tenga por conveniente, pudiendo firmar liquidaciones y percibir directamente el importe total del préstamo en una o más entregas, pagar cantidades y, en definitiva, ejecutar cuantos actos y otorgar cuantos documentos públicos o privados considere convenientes a tales fines, siendo de cuenta del vendedor los gastos ocasionados, y por cuenta del comprador todos los gastos derivados de una eventual subrogación.&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtRes2</label>
    <type>Text</type>
</CustomField>