force-app/main/default/objects/Opportunity/fields/CONGA_TxtResA1__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtResA1__c</fullName>
    <formula>IF(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva sin IVA&apos;),&apos;A) La cantidad de &apos; + IF(OR(ISBLANK(Amount), ISBLANK(Pago_Contrato_al_contado__c)),&apos; _________ &apos; ,TEXT(Amount * Pago_Contrato_al_contado__c)) + &apos;€, más I.V.A., que hacen un total de &apos; + IF(OR(ISBLANK(Amount), ISBLANK(Pago_Contrato_al_contado__c), ISBLANK(Porcentaje_IVA__c)),&apos; _________ &apos; ,TEXT(Amount * Pago_Contrato_al_contado__c * (1 + Porcentaje_IVA__c))) + &apos;€  que la parte compradora  entrega en este acto  mediante cheque bancario/transferencia a la cuenta de la vendedora, que se acepta salvo buen fin, y cuya fotocopia se adjunta.&apos; ,&apos;&apos;)+ 

IF(AND(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva con IVA&apos;), NOT(ISBLANK(Reserva__c))),&apos;A) La cantidad de &apos; + IF(ISBLANK(Reserva__c),&apos; _________ &apos; ,TEXT(Reserva__c)) + &apos;€, Más I.V.A., que hacen un total de &apos; + IF(OR(ISBLANK(Reserva__c), ISBLANK(Porcentaje_IVA__c)),&apos; _________ &apos; ,TEXT(Reserva__c * (1 + Porcentaje_IVA__c))) + &apos;€ que la  parte compradora entregó con anterioridad al presente contrato en concepto de reserva. Se adjunta como ANEXO I copia del documento justificativo de pago del importe entregado en concepto de reserva.&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtResA1</label>
    <type>Text</type>
</CustomField>