force-app/main/default/objects/Opportunity/fields/CONGA_TxtResA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtResA__c</fullName>
    <formula>IF(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva sin IVA&apos;),&apos;La cantidad restante hasta completar el precio total, asciende a &apos; + IF(OR(ISBLANK(Amount), ISBLANK(Pago_Contrato_al_contado__c)),&apos; _________ &apos; ,TEXT(Amount * Pago_Contrato_al_contado__c)) + &apos;€, Más I.V.A., que hacen un total de &apos; + IF(OR(ISBLANK(Amount), ISBLANK(Pago_Contrato_al_contado__c), ISBLANK(Porcentaje_IVA__c)),&apos; _________ &apos; ,TEXT(Amount * Pago_Contrato_al_contado__c * (1 +  Porcentaje_IVA__c))) + &apos;€ que la parte COMPRADORA entregó con anterioridad a la firma del presente contrato en concepto de reserva.&apos;,&apos;&apos;) + 

IF(ISPICKVAL(Tipo_de_Reserva__c, &apos;Reserva con IVA&apos;),&apos;La cantidad de &apos; + IF(ISBLANK(Reserva__c),&apos; _________ &apos; ,TEXT(Reserva__c)) + &apos;€, Más I.V.A., que hacen un total de &apos; + IF(OR(ISBLANK(Reserva__c), ISBLANK(Porcentaje_IVA__c)),&apos; _________ &apos; ,TEXT(Reserva__c * (1 +  Porcentaje_IVA__c))) + &apos;€ que la  parte compradora entregó con anterioridad al presente contrato en concepto de reserva.&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtResA</label>
    <type>Text</type>
</CustomField>